fix(accounts): remove content vertical spacing
This spacing will be declared on base.sty from now on.

--- a/brasilcomvc/accounts/static/styl/accounts-auth.styl
+++ b/brasilcomvc/accounts/static/styl/accounts-auth.styl
@@ -5,10 +5,6 @@
 body.accounts.login
 body.accounts.signup
 
-	#content
-		margin-top 2rem !important
-		margin-bottom 2rem !important
-
 	h1
 		margin-bottom 1rem !important
 		text-align center
